--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   "devDependencies": {
     "@types/node": "^18.15.5",
     "@types/react": "^18.0.28",
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.29",
+    "tailwindcss": "^3.3.3",
     "turbo": "^1.8.5",
     "typescript": "^4.9.5"
   },
